# quickcluster

./: CMakeLists.txt  README.md
cmake/: common.cmake  defines.cmake  find_3rdparty.cmake  find_commonapi_core.cmake  find_commonapi_someip.cmake  find_fdbus.cmake  find_protobuf.cmake  find_qtav.cmake  find_ros.cmake  find_vsomeip.cmake  platform.cmake  repproject.cmake
hmi/: CMakeLists.txt
hmi/cluster-hmi-coc/etc/bootmanager/: boot.cfg  cluster-hmi-coc.json  cluster-server-ivi.json  cluster-server-ivs.json  shutdown.json
hmi/cluster-hmi-coc/skins/: blue.qrc  dark.qrc  light.qrc
hmi/cluster-hmi-coc/skins/blue/: hmi_blue.qrc
hmi/cluster-hmi-coc/skins/dark/: hmi_dark.qrc
hmi/cluster-hmi-coc/skins/light/: hmi_light.qrc
hmi/cluster-hmi-coc/src/: clustermanager.cpp  clustermanager.h  qml.qrc
hmi/cluster-hmi-coc/src/qml/: ConnectRect.qml  MainPart.qml  SkinMask.qml  main.qml
hmi/cluster-hmi-coc/src/qml/Animation/: Animation.qml  AnimationVideo.qml
hmi/cluster-hmi-coc/src/qml/CarInfo/: CarInfo.qml
hmi/cluster-hmi-coc/src/qml/Common/: CircleClip.qml  CustomText.qml  DotsItem.qml  EngineNumber.qml  FilterVideo.qml  ImageClip.qml  OpacityMask.qml  ScrollText.qml  SlideItem.qml  SourceProxy.qml
hmi/cluster-hmi-coc/src/qml/Common/Shader/: OpacityMask.frag
hmi/cluster-hmi-coc/src/qml/Dashboard/: Dashboard.qml  EnginePanel.qml  FuelPanel.qml  SpeedPanel.qml  WaterPanel.qml
hmi/cluster-hmi-coc/src/qml/Dms/: Dms.qml
hmi/cluster-hmi-coc/src/qml/Information/: Adas.qml  Avg.qml  GearRect.qml  Information.qml  TemperatureRect.qml  TimeRect.qml  TripRect.qml
hmi/cluster-hmi-coc/src/qml/MiniDashboard/: EnginePanel.qml  FuelPanel.qml  MiniDashboard.qml  SpeedPanel.qml  WaterPanel.qml
hmi/cluster-hmi-coc/src/qml/MultiMedia/: MultiMedia.qml  Music.qml  Normal.qml  Phone.qml  Radio.qml
hmi/cluster-hmi-coc/src/qml/Navi/: FullVideo.qml  Navi.qml  navi.sdp
hmi/cluster-hmi-coc/src/qml/Telltales/: Telltales.qml
hmi/cluster-hmi-ejanus/: CMakeLists.txt
hmi/cluster-hmi-ejanus/etc/bootmanager/: boot.cfg  cluster-hmi-ejanus.json
hmi/cluster-hmi-ejanus/skins/: CMakeLists.txt  blue.qrc  golden.qrc  green.qrc  pink.qrc
hmi/cluster-hmi-ejanus/src/: main.cpp  qml.qrc
hmi/cluster-hmi-ejanus/src/qml/: IvsWarnRect.qml  MainPart.qml  SkinMask.qml  main.qml
hmi/cluster-hmi-ejanus/src/qml/Animation/: Animation.qml
hmi/cluster-hmi-ejanus/src/qml/CarInfo/: AvgSpeedPanel.qml  CarInfo.qml  DrawLine.qml  Tire.qml  TirePanel.qml
hmi/cluster-hmi-ejanus/src/qml/Common/: CircleClip.qml  CustomText.qml  DotsItem.qml  EngineNumber.qml  FilterVideo.qml  ImageClip.qml  OpacityMask.qml  ScrollText.qml  SlideItem.qml  SourceProxy.qml
hmi/cluster-hmi-ejanus/src/qml/Common/Shader/: CircleClip.frag
hmi/cluster-hmi-ejanus/src/qml/Dms/: Dms.qml
hmi/cluster-hmi-ejanus/src/qml/DoubleGauge/: DoubleGauge.qml  DoublePart.qml
hmi/cluster-hmi-ejanus/src/qml/Information/: Adas.qml  GearAndTrip.qml  Information.qml  TemperatureRect.qml  TimeRect.qml
hmi/cluster-hmi-ejanus/src/qml/MultiMedia/: IviWarnRect.qml  MultiMedia.qml  Music.qml  Normal.qml  Phone.qml  Radio.qml
hmi/cluster-hmi-ejanus/src/qml/SingleGauge/: EnginePanel.qml  OilPanel.qml  SingleGauge.qml  SpeedPanel.qml  WaterPanel.qml
hmi/cluster-hmi-ejanus/src/qml/Telltales/: Telltales.qml  TelltalesImage.qml
idl/common/: clusterivi.def  clusterivi.rep  clusterivs.def  clusterivs.rep
servers/: CMakeLists.txt
servers/cluster-servers-common/: CMakeLists.txt
servers/cluster-servers-common/cluster-server-ivi/: CMakeLists.txt
servers/cluster-servers-common/cluster-server-ivi/etc/vsomeip/: vsomeip-ivi.json
servers/cluster-servers-common/cluster-server-ivi/idl/fdbus/: cluster.proto  ivi.proto
servers/cluster-servers-common/cluster-server-ivi/idl/vsomeip/: cluster.proto
servers/cluster-servers-common/cluster-server-ivi/src/: clusterivi.cpp  clusterivi.h  clusterivi_fdbus.hpp  clusterivi_vsomeip.hpp  main.cpp
servers/cluster-servers-common/cluster-server-ivs/: CMakeLists.txt
servers/cluster-servers-common/cluster-server-ivs/src/: clusterivs.cpp  clusterivs.h  main.cpp
